src/Chat/Chat.css
#chat {
  height: 80vh;
  overflow-y: scroll;
  margin-bottom: 1em;
}

@media (min-width: 768px) {
  #chat {
    margin-left: 1em;
    margin-right: 1em;
  }
}

#chat .post {
  clear: both;
}

#chat .message {
  font-size: 1rem;
}

#chat .ava {
  float: left;
  width: 75px;
  height: 75px;
  margin-right: 0.5rem;
}

#chat .date {
  font-size: 0.8rem;
}

#chat .author {
  margin-right: 0.5em;
}

#new-message-form textarea {
  width: 100%;
  margin-bottom: 0.5em;
  font-size: 1rem;
  padding: 0.5em;
}

#new-message-form button {
  font-size: 1.5rem;
}

#chat .message {
  white-space: pre-line;
  margin-bottom: 0.5em;
}
#chat .message img,
#chat .message video {
  max-width: 65vw;
  max-height: 50vh;
}

